--- a/init-modelling.ipynb
+++ b/init-modelling.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 117,
    "source": [
     "import pandas as pd\n",
     "import seaborn as sns\n",
+    "import numpy as np\n",
     "\n",
     "\n",
     "from IPython.core.interactiveshell import InteractiveShell\n",
@@ -1495,13 +1496,48 @@
   {
    "cell_type": "markdown",
    "source": [
+    "# Create a scorer"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "source": [
+    "from sklearn.metrics import make_scorer\n",
+    "\n",
+    "def min_cost_scorer(y_test, y_pred, test_cost = 100, training_cost = 10000, prob_clean = 0.5, user_cost = 50000):\n",
+    "    # get confusion matrix from y_test and y_predict\n",
+    "    cm = confusion_matrix(y_true=y_test, y_pred=y_pred)\n",
+    "\n",
+    "    # cost of students taking the test\n",
+    "    test_costs = test_cost * sum(sum(cm))\n",
+    "    # cost of a student falsely identified to not consume drugs\n",
+    "    FN_cost = user_cost * cm[1][0]\n",
+    "    # cost of a student having training due to falsely being identified as a drug user\n",
+    "    FP_cost = training_cost * cm[0][1]\n",
+    "    # cost of a student having training due to correctly being identified as a potential drug user considering \n",
+    "    # that the training is prob_clean % effective\n",
+    "    TP_cost = training_cost * cm[1][1] + user_cost * cm[1][1] * (1 - prob_clean)\n",
+    "\n",
+    "    return test_costs + FN_cost + FP_cost + TP_cost\n",
+    "\n",
+    "\n",
+    "cost_scorer = make_scorer(min_cost_scorer, greater_is_better=False)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "# Randomized Search CV for better Hyperparameters"
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 123,
    "source": [
     "from sklearn.model_selection import RandomizedSearchCV\n",
     "from sklearn.metrics import fbeta_score, make_scorer\n",
@@ -1516,7 +1552,7 @@
     "}\n",
     "\n",
     "rf_model = RandomForestClassifier(random_state=RSEED)\n",
-    "randCV_rfc = RandomizedSearchCV(estimator = rf_model, param_distributions = param_grid, n_iter = 60, scoring= ftwo_scorer, refit=True, verbose = 1)\n",
+    "randCV_rfc = RandomizedSearchCV(estimator = rf_model, param_distributions = param_grid, n_iter = 60, scoring= cost_scorer, refit=True, verbose = 1)\n",
     "randCV_rfc.fit(X_train, y_train)"
    ],
    "outputs": [
@@ -1537,57 +1573,50 @@
        "                                        'max_features': ['auto', 'sqrt',\n",
        "                                                         'log2'],\n",
        "                                        'n_estimators': range(100, 500, 10)},\n",
-       "                   scoring=make_scorer(fbeta_score, beta=2), verbose=1)"
+       "                   scoring=make_scorer(min_cost_scorer, greater_is_better=False),\n",
+       "                   verbose=1)"
       ]
      },
      "metadata": {},
-     "execution_count": 74
-    },
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "{'n_estimators': 280,\n",
-       " 'max_features': 'sqrt',\n",
-       " 'max_depth': 13,\n",
-       " 'criterion': 'entropy'}"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 74
-    },
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "0.7412615272452842"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 74
+     "execution_count": 123
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 132,
    "source": [
     "print(randCV_rfc.best_params_)\n",
     "print(randCV_rfc.best_score_)\n",
     "\n",
     "y_pred = randCV_rfc.predict(X_test)\n",
     "\n",
-    "print(recall_score(y_test, y_pred))"
+    "print(\"Optimized costs: {:,}\".format( min_cost_scorer(y_test,y_pred)))\n",
+    "\n",
+    "cm = confusion_matrix(y_test,y_pred)\n",
+    "\n",
+    "y_pred_all = np.ones(len(y_test))\n",
+    "y_pred_zero = np.zeros(len(y_test))\n",
+    "\n",
+    "cost_all_user = min_cost_scorer(y_test, y_pred_all)\n",
+    "\n",
+    "cost_no_user =  min_cost_scorer(y_test, y_pred_zero, test_cost= 0)\n",
+    "\n",
+    "print(\"Costs of predicting all to be a user: {:,}\".format(cost_all_user))\n",
+    "print(\"Costs of not implementing the detection system: {:,}\".format(cost_no_user))\n",
+    "\n"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "{'n_estimators': 280, 'max_features': 'sqrt', 'max_depth': 13, 'criterion': 'entropy'}\n",
-      "0.7412615272452842\n",
-      "0.7277486910994765\n"
+      "{'n_estimators': 230, 'max_features': 'auto', 'max_depth': 7, 'criterion': 'entropy'}\n",
+      "-4791140.0\n",
+      "Optimized costs: 8,032,000.0\n",
+      "Costs of predicting all to be a user: 9,522,000.0\n",
+      "Costs of not implementing the detection system: 9,550,000.0\n"
      ]
     }
    ],
