--- a/clean_data.ipynb
+++ b/clean_data.ipynb
@@ -618,7 +618,6 @@
    "execution_count": 75,
    "source": [
     "# Drop ID column\n",
-    "\n",
     "df.drop('ID', axis = 1, inplace= True)"
    ],
    "outputs": [],
@@ -974,9 +973,10 @@
    "cell_type": "code",
    "execution_count": 79,
    "source": [
-    "# Add \"addicted\" column if any of the class for any of the drugs considered was CL5 or CL6 (in other words, being 1) \n",
+    "# Add \"addicted\" column if any of the class for any of the drugs considered was CL4, CL5 or CL6 (in other words, being 1) \n",
     "df['User'] = (df[drugs].sum(axis = 1) > 0) * 1\n",
     "\n",
+    "# Plot the distribution of classes (user, non-user) to check imbalance\n",
     "sns.countplot(x = 'User', data = df)\n",
     "plt.show()"
    ],
@@ -1014,70 +1014,6 @@
     "df.to_html('data/drugs.html')\n",
     "df.to_csv('data/drug_consumption_clean.csv')"
    ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 81,
-   "source": [
-    "# write the baseline hypothesis in the query\n",
-    "df_temp = df[df['SS']>df['SS'].mean()]   # SS larger than its mean value\n",
-    "\n",
-    "TP = df_temp.query('Addicted == 1').shape[0]\n",
-    "FP  = df_temp.query('Addicted == 0').shape[0]\n",
-    "TN_FN = df.shape[0] - df_temp.shape[0] \n",
-    "FP_TN = df.query('Addicted == 0').shape[0]\n",
-    "FN_TP = df.query('Addicted == 1').shape[0]\n",
-    "\n",
-    "TN = FP_TN - FP \n",
-    "FN = TN_FN -TN\n",
-    "\n",
-    "beta = 2\n",
-    "Accuracy = (TP + TN)/ (TP + TN + FP + FN)\n",
-    "Recall = TP/(TP+FN)    # sensitivity\n",
-    "Precision = TP/(TP+FP)\n",
-    "F1_score = 2*Recall*Precision/(Recall + Precision)\n",
-    "Specificity = TN/(TN+FP)\n",
-    "F_beta = (1 + beta**2) * Recall * Precision/(Recall + Precision * beta**2)\n",
-    "\n",
-    "metrics = {'Accuracy':round(Accuracy,2),\n",
-    "           'Recall':round(Recall,2), \n",
-    "           'Precision':round(Precision,2), \n",
-    "           'F1_score':round(F1_score,2), \n",
-    "           'Specificity':round(Specificity,2),\n",
-    "           'F_beta':round(F_beta,2)}\n",
-    "\n",
-    "print(\"Confusion Matrix\")\n",
-    "print(TN, FP)\n",
-    "print(FN, TP)\n",
-    "\n",
-    "for metric in metrics.items():\n",
-    "    print(metric)\n"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Confusion Matrix\n",
-      "697 416\n",
-      "195 569\n",
-      "('Accuracy', 0.67)\n",
-      "('Recall', 0.74)\n",
-      "('Precision', 0.58)\n",
-      "('F1_score', 0.65)\n",
-      "('Specificity', 0.63)\n",
-      "('F_beta', 0.7)\n"
-     ]
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
    "outputs": [],
    "metadata": {}
   }
